# flashmind

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.dev.yml  docker-compose.yml
entity/: Cargo.toml  gen.sh
entity/bindings/: Deck.ts  FlashCard.ts  FlashCardContent.ts  FlashCardItem.ts  FlashCardSection.ts  Kind.ts  Language.ts  Share.ts  User.ts  index.ts
entity/src/: deck.rs  deck_cards.rs  flash_card.rs  followed_decks.rs  lib.rs  prelude.rs  sea_orm_active_enums.rs  user.rs
entity/src/custom/: flash_card.rs  lang.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_init.rs
schema/: Cargo.toml
schema/src/: lang.rs  lib.rs
server/: Cargo.toml
server/src/: app.rs  config.rs  db.rs  lib.rs  main.rs  oidc.rs  schema.rs  session.rs
server/src/api/: flashcard.rs  mod.rs
server/src/data/: flash_card.rs  lang.rs  mod.rs
server/src/dto/: deck.rs  flashcard.rs  mod.rs
server/src/entities/: deck.rs  flash_card.rs  flashcard.rs  followed_decks.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  subject_id.rs  user.rs
server/src/handler/: hello_world.rs  mod.rs
server/src/route/: auth.rs  mod.rs
server/src/route/api/: auth.rs  deck.rs  flash_card.rs  flashcard.rs  mod.rs  oidc.rs
