[workspace]
members = ["server", "migration", "entity"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = "1"
sea-orm = { version = "0.12" }

migration = { path = "migration" }

[profile.release]


[profile.perf]
inherits = "release"
lto = "fat"
codegen-units = 1
