[package]
name = "entity"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
sea-orm.workspace = true

#rustc-hash = "1"
uuid = "1.7"

serde = { workspace = true, features = ["derive"] }
serde_json = "1"

ts-rs = { version = "7.1", features = ["uuid-impl", "no-serde-warnings"] }
