[package]
name = "server"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1.0", features = ["full"] }

serde = { workspace = true, features = ["derive"] }

mongodb = "2.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

flashmind-schema.workspace = true
futures = "0.3"


#oauth2 = "4.4"
openidconnect = "3.5"
tower-http = { version = "0.5", features = ["cors"] }
#axum-extra = { version = "0.9", features = ["cookie-signed"] }
#chrono = { version = "0.4", features = ["clock"] }
#reqwest = "0.11"
anyhow = "1.0.79"
axum_session = { version = "0.12", default-features = false }
