[package]
name = "server"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
axum_session = { version = "0.12", default-features = false }
#tower-http = { version = "0.5", features = ["cors"] }
openidconnect = "3.5"

tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

#mongodb = "2.8"
#sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "mysql", "macros", "migrate"] }
sea-orm = { version = "0.12", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }

anyhow = "1.0.79"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { workspace = true, features = ["derive"] }
serde_json = "1"

mimalloc = "0.1"