[package]
name = "flashmind-server"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
migration.workspace = true
entity = { path = "../entity" }

axum = { version = "0.7", features = ["macros"] }
axum_session = { version = "0.12", default-features = false }
#tower-http = { version = "0.5", features = ["cors"] }
openidconnect = "3.5"
#utoipa = { version = "4.2", features = ["axum_extras", "uuid"] }

tokio = { version = "1", features = ["rt"] }
futures = "0.3"

sea-orm = { workspace = true, features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }

anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { workspace = true, features = ["derive"] }
uuid = "1.7"

mimalloc = "0.1"
rustc-hash = "1"

[dev-dependencies]
tower = "0.4"
http-body-util = "0.1"
sea-orm = { workspace = true, features = ["sqlx-sqlite"] }
